# cs7641-machine-learning

./: README.md  pyproject.toml
A1_supervised_learning/: Prototype.ipynb  config.py  dataset.py  experiment_runner.py  main.py  pipeline.py  utilities.py
A1_supervised_learning/learners/: ANN.py  AdaBoost.py  DT.py  KNN.py  SVM.py  base_classifier.py
