[tool.poetry]
name = "cs7641-machine-learning"
version = "0.1.0"
description = "code and study materials for CS7641 ML"
authors = ["zburns31 <zacbburns@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
seaborn = "^0.13.2"
mlrose-hiive = "^2.2.4"
gym = "^0.26.2"
graphviz = "^0.20.3"
jupyterlab = "^4.2.4"
ydata-profiling = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
